--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://tehwentzel.github.io/DigitalTwinVis",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
@@ -13,16 +12,14 @@
     "axios": "^1.4.0",
     "d3": "^7.8.5",
     "framer-motion": "^10.12.21",
-    "github-pages": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "set HTTPS=tru&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
